--- a/Ava.SocketTool/App.axaml
+++ b/Ava.SocketTool/App.axaml
@@ -3,7 +3,11 @@
              x:Class="Ava.SocketTool.App">
 
     <Application.Styles>
-        <FluentTheme />
-        <StyleInclude Source="avares://Ava.SocketTool/Styles/ButtonStyle.axaml"></StyleInclude>
+        <FluentTheme/>
+        <StyleInclude Source="avares://Ava.SocketTool/Styles/IndexTheme.axaml"></StyleInclude>
+
+        
+        <StyleInclude Source="/Controls/Overlay.axaml"></StyleInclude>
+        
     </Application.Styles>
 </Application>
