--- a/Ava.SocketTool/Views/MainView.axaml
+++ b/Ava.SocketTool/Views/MainView.axaml
@@ -27,11 +27,11 @@
                 <Button Content="删除" Classes="Warning"/>
             </StackPanel>
 
-            <Grid Grid.Row="1" ColumnDefinitions="*,Auto,3.5*">
+            <Grid Grid.Row="1" ColumnDefinitions="*,Auto,3*">
                 <TreeView Background="#FBFAF0" ItemsSource="{Binding NetTypes}" x:Name="TreeView" >
                     <TreeView.ItemTemplate>
                         <TreeDataTemplate ItemsSource="{Binding Children}">
-                            <TextBlock Text="{Binding Name}" />
+                            <TextBlock Text="{Binding Name}" FontSize="12" />
                         </TreeDataTemplate>
                     </TreeView.ItemTemplate>
                 </TreeView>
