--- a/Ava.SocketTool/Views/Dialog/CreateServerView.axaml
+++ b/Ava.SocketTool/Views/Dialog/CreateServerView.axaml
@@ -3,25 +3,28 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:dialog="clr-namespace:Ava.SocketTool.ViewModels.Dialog"
-             mc:Ignorable="d" d:DesignWidth="200" d:DesignHeight="100"
-             Background="Azure"
-             Width="200" Height="100"
+             mc:Ignorable="d" 
+             d:DesignWidth="250" d:DesignHeight="170"
+             Width="250" Height="170"
+             BorderThickness="1"
+             BorderBrush="Cornsilk"
+             Background="{DynamicResource BorderCardBackground}"
              x:Class="Ava.SocketTool.Views.Dialog.CreateServerView">
     <Design.DataContext>
         <dialog:CreateServerViewModel/>
     </Design.DataContext>
     
     <Grid>
-        <StackPanel Orientation="Vertical" VerticalAlignment="Center" Spacing="20">
+        <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center" Spacing="20">
             <StackPanel Orientation="Horizontal" Margin="20 0" >
-                <TextBlock Text="监听端口:  " VerticalAlignment="Center" />
-                <TextBox Height="5" Width="80" Text="60000" x:Name="Port"></TextBox>
+                <TextBlock Text="监听端口: " VerticalAlignment="Center" />
+                <TextBox  Width="80" Text="60000" x:Name="Port"></TextBox>
             </StackPanel>
             
             
             <StackPanel Orientation="Horizontal" Margin="20 0" Spacing="30" >
-                <Button Content="确定" Command="{Binding CreateCommand}" CommandParameter="{Binding #Port.Text}" Width="50"></Button>
-                <Button Content="取消"  x:Name="Cancel"  Click="Cancel_OnClick" Width="50"></Button>
+                <Button Content="确定" Command="{Binding CreateCommand}" CommandParameter="{Binding #Port.Text}" ></Button>
+                <Button Content="取消"  x:Name="Cancel"  Click="Cancel_OnClick" Classes="Danger" ></Button>
             </StackPanel>
         </StackPanel>
        
