--- a/Ava.SocketTool/Styles/HeaderedContentControl.axaml
+++ b/Ava.SocketTool/Styles/HeaderedContentControl.axaml
@@ -18,37 +18,57 @@
         <Setter Property="Template">
             <ControlTemplate TargetType="HeaderedContentControl">
                 <Grid x:Name="GroupBoxRoot">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
-                    <Border x:Name="HeaderSite"
-                            Grid.Row="0"
-                            Background="{TemplateBinding Background}"
-                            BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}"
-                            UseLayoutRounding="True">
-                        <ContentControl x:Name="HeaderContent"
-                                        Margin="{DynamicResource GroupBoxHeaderThemePadding}"
-                                        Content="{TemplateBinding Header}"
-                                        ContentTemplate="{TemplateBinding HeaderTemplate}"
-                                        FontFamily="{TemplateBinding FontFamily}"
-                                        FontSize="{TemplateBinding FontSize}"
-                                        FontWeight="{TemplateBinding FontWeight}"
-                                        UseLayoutRounding="False" />
-                    </Border>
-                    <Border Grid.Row="1"
-                            Background="Transparent"
-                            BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{Binding RelativeSource={RelativeSource TemplatedParent},
-                                                                        Path=BorderThickness}"
-                            UseLayoutRounding="True">
-                        <ContentPresenter Margin="{TemplateBinding Padding}"
-                                          Content="{TemplateBinding Content}"
-                                          ContentTemplate="{TemplateBinding ContentTemplate}"
-                                          Cursor="{TemplateBinding Cursor}"
-                                          UseLayoutRounding="False" />
-                    </Border>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <Border ZIndex="1" Padding="5,0,5,0" Background="{DynamicResource WindowDefaultBackground}" Margin="5,0,0,0">
+                            <TextBlock TextBlock.FontWeight="Bold" Text="{TemplateBinding Header}" />
+                        </Border>
+                        <Border Theme="{StaticResource RadioButtonGroupBorder}" Padding="8" Grid.RowSpan="2" Grid.ColumnSpan="2" Margin="0,10,0,0"
+                                BorderBrush="{TemplateBinding BorderBrush}"
+                                BorderThickness="1">
+                            <ContentPresenter Content="{TemplateBinding Content}" />
+                        </Border>
+                    </Grid>
+                    
+                    
+                    <!-- <Grid.RowDefinitions> -->
+                    <!--     <RowDefinition Height="Auto" /> -->
+                    <!--     <RowDefinition Height="*" /> -->
+                    <!-- </Grid.RowDefinitions> -->
+                    <!-- <Border x:Name="HeaderSite" -->
+                    <!--         Grid.Row="0" -->
+                    <!--         Background="{TemplateBinding Background}" -->
+                    <!--         BorderBrush="{TemplateBinding BorderBrush}" -->
+                    <!--         BorderThickness="{TemplateBinding BorderThickness}" -->
+                    <!--         UseLayoutRounding="True"> -->
+                    <!--     <ContentControl x:Name="HeaderContent" -->
+                    <!--                     Margin="{DynamicResource GroupBoxHeaderThemePadding}" -->
+                    <!--                     Content="{TemplateBinding Header}" -->
+                    <!--                     ContentTemplate="{TemplateBinding HeaderTemplate}" -->
+                    <!--                     FontFamily="{TemplateBinding FontFamily}" -->
+                    <!--                     FontSize="{TemplateBinding FontSize}" -->
+                    <!--                     FontWeight="{TemplateBinding FontWeight}" -->
+                    <!--                     UseLayoutRounding="False" /> -->
+                    <!-- </Border> -->
+                    <!-- <Border Grid.Row="1" -->
+                    <!--         Background="Transparent" -->
+                    <!--         BorderBrush="{TemplateBinding BorderBrush}" -->
+                    <!--         BorderThickness="{Binding RelativeSource={RelativeSource TemplatedParent}, -->
+                    <!--                                                     Path=BorderThickness}" -->
+                    <!--         UseLayoutRounding="True"> -->
+                    <!--     <ContentPresenter Margin="{TemplateBinding Padding}" -->
+                    <!--                       Content="{TemplateBinding Content}" -->
+                    <!--                       ContentTemplate="{TemplateBinding ContentTemplate}" -->
+                    <!--                       Cursor="{TemplateBinding Cursor}" -->
+                    <!--                       UseLayoutRounding="False" /> -->
+                    <!-- </Border> -->
                 </Grid>
                 
                 <!-- <Border -->
