--- a/Ava.SocketTool/Views/MainView.axaml
+++ b/Ava.SocketTool/Views/MainView.axaml
@@ -57,10 +57,11 @@
                 <Grid Grid.Column="2">
                     <Grid>
                         <Grid RowDefinitions="1.2*,2*,2.5*,0.5*"
-                              IsVisible="{Binding CurrentSelectModel.Ip,Converter={x:Static StringConverters.IsNotNullOrEmpty}}">
+                              IsVisible="{Binding CurrentSelectModel.Ip,Converter={x:Static StringConverters.IsNotNullOrEmpty}}"
+                              >
                             <HeaderedContentControl Grid.Row="0" Theme="{DynamicResource GroupBox}" Header="Socket状态">
                                 <Grid RowDefinitions="*,*">
-                                    <TextBlock Text="{Binding CurrentSelectModel.ServerStateModel.StateText}"></TextBlock>
+                                    <TextBlock Text="{Binding CurrentSelectModel.ServerStateModel.StateText}" Classes="Danger"></TextBlock>
                         
                                     <Grid Grid.Row="1" ColumnDefinitions="*,*">
                                         <StackPanel Orientation="Horizontal" Spacing="10">
@@ -83,18 +84,39 @@
                             <HeaderedContentControl Grid.Row="1" Theme="{DynamicResource GroupBox}" Header="数据接收及提示窗口"
                                                     Margin="0 5 0 0">
                                 <TextBox TextWrapping="Wrap" AcceptsReturn="True" VerticalContentAlignment="Top"
-                                         Text="{Binding ReceiveMessage}" />
+                                         Text="{Binding CurrentSelectModel.ReceiveMessage}" />
                             </HeaderedContentControl>
+                            
+                            <Grid Grid.Row="2" ColumnDefinitions="2*,*">
+                                <HeaderedContentControl Grid.Column="0" Theme="{DynamicResource GroupBox}" Header="数据发送窗口"
+                                                        Margin="0 5 0 0">
+                                    <TextBox TextWrapping="Wrap" AcceptsReturn="True" VerticalContentAlignment="Top"
+                                             Text="{Binding CurrentSelectModel.SendMessage}" />
+                                </HeaderedContentControl>
+                                
+                                <StackPanel Grid.Column="1" Orientation="Vertical" HorizontalAlignment="Center" >
+                                    <Button Content="发送数据" Margin="0 30 0 0"></Button>
+                                    <TextBlock Text="重复发送次数" Margin="0 20 0 0"></TextBlock>
+                                    <ComboBox Width="150" Classes="Bordered">
+                                        <ComboBoxItem>1</ComboBoxItem>
+                                        <ComboBoxItem>10</ComboBoxItem>
+                                        <ComboBoxItem>100</ComboBoxItem>
+                                        <ComboBoxItem>1000</ComboBoxItem>
+                                        <ComboBoxItem>10000</ComboBoxItem>
+                                    </ComboBox>
+                                    
+                                </StackPanel>
+                            </Grid>
                         </Grid>
                         
                         
-                        <Border  Theme="{StaticResource CardBorder}" VerticalAlignment="Top" 
+                        <Border  Theme="{StaticResource CardBorder}" VerticalAlignment="Top"
                                  IsVisible="{Binding CurrentSelectModel.Ip,Converter={x:Static StringConverters.IsNullOrEmpty}}">
                             <StackPanel Orientation="Vertical" Spacing="30">
                                 <TextBlock Text="欢迎使用Ava.SockerTool调试工具" Classes="Success" HorizontalAlignment="Center" FontSize="18" />
                                 <TextBlock Text="https://gitee.com/CRole/ava.-socket-tool" Classes="Warning" HorizontalAlignment="Center" />
                             </StackPanel>
-                         
+                        
                         </Border>
                     </Grid>
                 </Grid>
