--- a/Ava.SocketTool/Views/Dialog/CreateNodeView.axaml
+++ b/Ava.SocketTool/Views/Dialog/CreateNodeView.axaml
@@ -31,11 +31,11 @@
                 <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center" Spacing="20">
                     <StackPanel Orientation="Horizontal" Margin="20 0">
                         <TextBlock Text="    对方IP: " VerticalAlignment="Center" />
-                        <TextBox Width="100" Text="127.0.0.1" x:Name="IP"></TextBox>
+                        <TextBox Width="100" Text="{Binding Ip}" x:Name="IP"></TextBox>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Margin="20 0">
                         <TextBlock Text="对方端口: " VerticalAlignment="Center" />
-                        <TextBox Width="80" Text="60000" x:Name="Port"></TextBox>
+                        <TextBox Width="80" Text="{Binding Port}" x:Name="Port"></TextBox>
                     </StackPanel>
                 </StackPanel>
             </DataTemplate>
